boilerplate/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "my-deployment"
  namespace: "myNamespace"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myApp
  template:
    metadata:
      labels:
        app: "my"
    spec:
      containers:
      - image: myRegistry/myApp
        imagePullPolicy: Always
        name: "my"
        ports:
        - containerPort: 80
          name: myApp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
