boilerplate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-service"
  namespace: "myNamespace"
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: myApp        
  type: NodePort
  selector:
    app: "myApp"
